# ubermcp

./: .coverage  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  flake.nix  pyproject.toml  run_mcp_bridge.sh  run_mcp_bridge_clean.sh  setup.py
.claude/: settings.local.json
certs/: generate_certs.sh  server.crt  server.key
docs/: CLAUDE.md  CLAUDE_DESKTOP_REMOTE_SETUP.md  CLAUDE_DESKTOP_SETUP.md  IMPLEMENTATION_PLAN.md  README.md  claude_desktop_config.json  claude_desktop_config_http.json  claude_desktop_config_https.json
scripts/: add_to_claude.py  dev.sh  final_claude_update.py  mcp_bridge_wrapper.py  mcp_claude.sh  mcp_direct.sh  run_mcp_bridge_direct.sh  run_mcp_bridge_https.sh  run_mcp_final.sh  run_server.py  run_server_https.py  run_tests.sh  start_server.sh  test_bridge.py  test_env.py  update_claude_config.py  watch_tests.sh
src/: base_tool.py  main.py  mcp_bridge.py  mcp_server.py  mcp_stdio_bridge.py  mcp_stdio_bridge_https.py
src/tests/: conftest.py  test_base_tool.py  test_kubernetes_port_forwarding.py  test_kubernetes_tools.py  test_kubernetes_tools_extended.py  test_main.py  test_mcp_server.py
src/tools/: example_tool.py  helm_base.py  helm_dependency.py  helm_get.py  helm_history.py  helm_install.py  helm_list.py  helm_repo.py  helm_rollback.py  helm_search.py  helm_show.py  helm_status.py  helm_uninstall.py  helm_upgrade.py  kubernetes_annotate.py  kubernetes_apply.py  kubernetes_autoscale.py  kubernetes_cluster_info.py  kubernetes_cp.py  kubernetes_crd.py  kubernetes_create.py  kubernetes_cron_jobs.py  kubernetes_delete.py  kubernetes_deployments.py  kubernetes_describe.py  kubernetes_edit.py  kubernetes_events.py  kubernetes_exec.py  kubernetes_explain.py  kubernetes_expose.py  kubernetes_get.py  kubernetes_ingresses.py  kubernetes_jobs.py  kubernetes_label.py  kubernetes_logs.py  kubernetes_node_management.py  kubernetes_patch.py  kubernetes_persistent_volumes.py  kubernetes_pods.py  kubernetes_port_forwarding.py  (+8 more)
